<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings">

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/wifi"
            android:summary="@string/summary_edittext_preference"
            android:dialogTitle="@string/dialog_title_edittext_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/security_settings">

        <CheckBoxPreference
            android:key="nightmode"
            android:title="@string/night"
            android:summary="@string/summary_nightmode_preference" />


        <CheckBoxPreference
            android:key="senddata"
            android:title="@string/send_data"
            android:summary="@string/summary_data_preference" />

    </PreferenceCategory>
</PreferenceScreen>